--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <input id="userinput" type="text" placeholder="enter items">
     <button id="enter">Enter</button>
     <ul>
-        <li class="bold red" random="23">Notebook</li>
+        <li>Notebook</li>
         <li>Jello</li>
         <li>Spinach</li>
         <li>Rice</li>
