--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 </head>
 <body>
     <h1>Shopping List</h1>
-    <p id="first">Get it done today</p>
+    <p>Get it done today</p>
     <input id="userinput" type="text" placeholder="enter items">
     <button id="enter">Enter</button>
     <ul>
-        <li>Notebook</li>
-        <li>Jello</li>
-        <li>Spinach</li>
-        <li>Rice</li>
-        <li>Birthday Cake</li>
-        <li>Candles</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Notebook</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Jello</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Spinach</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Rice</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Birthday Cake</li>
+        <li class="li-wrapper"><button class="delete">Del</button> Candles</li>
     </ul>
+    <button class="reset">Clear this list</button>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
