--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Shopping List</h1>
-    <p>Get it done today</p>
+    <h1 class="title"><img src="./shop.png" width="40" height="40"> // Shopping List //</h1>
+    <hr align="left">
+    <p class="second">Get it done by today</p>
     <input id="userinput" type="text" placeholder="enter items">
     <button id="enter">Enter</button>
     <ul>
